<resources>
    <string name="app_name">MyNote</string>
    <string name="search_hint_title">Search your note</string>
    <string name="title_note">Your Note</string>
    <string name="title_reminder">Reminder Notes</string>
    <string name="title_label">Label</string>
    <string name="title_recycle_bin">Recycle Bin</string>
    <string name="title_setting">Setting</string>
    <string name="title_about_author">About author</string>
    <string name="title_pined_items">Pined</string>
    <string name="title_normal_items">Others</string>
    <string name="demo_task_title">To Do</string>
    <string name="demo_time">March 20,2019 11:30AM</string>
    <string name="demo_check_items">0/3</string>
    <string name="title_other">Other</string>
    <string name="title_delete">Delete All Note</string>
    <string name="title_delete_item">Delete this task</string>
    <string name="title_restore_item">Restore this task</string>
    <string name="msg_add_task_done">Add New Task Done</string>
    <string name="msg_can_not_add_task">Can not add new task</string>
    <string name="msg_edit_task_done">Edit task done</string>
    <string name="msg_can_not_edit_task">Can not edit task</string>
    <string name="msg_remove_task_done">Remove task done</string>
    <string name="msg_can_not_remove_task">Can not remove this task</string>
    <string name="msg_note_not_existing">Note Note Existing</string>
    <string name="msg_recycle_bin_empty">Recycle bin is empty</string>
    <string name="msg_remove_task_error">Can not remove task</string>
    <string name="msg_restore_task_done">Restored task</string>
    <string name="msg_restore_task_error">Can not restore task</string>
    <string name="action_undo">UNDO</string>
    <string name="msg_task_has_remove_from_list"> has remove from list</string>
    <string name="msg_task_has_restore_from_list"> has restore from list</string>
    <string name="msg_can_not_undo_restore">Cannot undo restore</string>
    <string name="title_pin_this_task">Pin this task</string>
    <string name="title_delete_this_task">Move to recycle bin</string>
    <string name="title_task_info">Title</string>
    <string name="hint_description">Description</string>
    <string name="title_label_info_screen">Label</string>
    <string name="title_date">Date</string>
    <string name="title_subitems">List sub items:</string>
    <string name="hint_add_new_subitem">Add new sub task here</string>
    <string name="title_time">Time</string>
    <string name="subitm_title">Demo subitem</string>
</resources>
