<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myapp.MyNote.ui.task_info.TaskInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/title_task_info"
            android:singleLine="true"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@null"
        android:hint="@string/hint_description"
        android:inputType="text"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/divider_description_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/divider_description_label"
        style="@style/Divider.Horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_description" />

    <ImageView
        android:id="@+id/img_tag"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/ic_label_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_label"
        app:layout_constraintTop_toBottomOf="@id/divider_description_label" />

    <TextView
        android:id="@+id/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/title_label_info_screen"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/img_tag"
        app:layout_constraintRight_toLeftOf="@id/recycle_label"
        app:layout_constraintTop_toBottomOf="@id/divider_description_label" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@id/text_label"
        app:layout_constraintTop_toBottomOf="@id/divider_description_label" />

    <ImageView
        android:id="@+id/img_date_time"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/ic_calendar_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/text_date"
        app:layout_constraintTop_toBottomOf="@id/barrier_label_datetime" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier_label_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="img_tag,recycle_label" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/title_date"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/img_date_time"
        app:layout_constraintTop_toBottomOf="@id/barrier_label_datetime" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/title_time"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/text_date"
        app:layout_constraintTop_toBottomOf="@id/barrier_label_datetime" />

    <View
        android:id="@+id/divider_datetime_subitems"
        style="@style/Divider.Horizontal"
        android:layout_marginTop="@dimen/sp_20"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/edt_add_sub_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_date_time" />

    <TextView
        android:id="@+id/header_sub_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="15dp"
        android:text="@string/title_subitems"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/recycle_sub_items"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_add_sub_task" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_sub_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_sub_items" />

    <EditText
        android:id="@+id/edt_add_sub_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_7"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/hint_add_new_subitem"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_datetime_subitems" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_task_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:src="@drawable/ic_check_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>