<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_3"
    android:layout_marginRight="@dimen/dp_3"
    android:layout_marginBottom="@dimen/dp_10"
    android:padding="@dimen/dp_10"
    app:cardCornerRadius="8dp"
    app:cardElevation="@dimen/dp_5">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/text_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/demo_task_title"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@drawable/bg_date_reminder"
            android:padding="@dimen/dp_7"
            android:text="@string/demo_time"
            android:textSize="@dimen/sp_10"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/image_check_items"
            app:layout_constraintTop_toBottomOf="@id/text_task_title" />

        <ImageView
            android:id="@+id/image_check_items"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_8"
            android:src="@drawable/ic_check_box_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_date_time"
            app:layout_constraintRight_toLeftOf="@id/text_check_items"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_task_title" />

        <TextView
            android:id="@+id/text_check_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_8"
            android:text="@string/demo_check_items"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_check_items"
            app:layout_constraintTop_toBottomOf="@id/text_task_title" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
